# gensql-python

./: .gitignore  README.md  hatch_build.py  pyproject.toml
gateway/: .gitignore  build.clj  deps.edn
src/gensql/: __init__.py  db.py
src/gensql_python/: __init__.py
tests/: db.edn
