[project]
name = "gensql-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leif Andersen", email = "leif@leifandersen.pl" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gensql-python = "gensql_python:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
