[project]
name = "gensql"
version = "0.1.0"
description = "Python Bindings for GenSQL"
readme = "README.md"
authors = [
    { name = "Leif Andersen", email = "leif@leifandersen.pl" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gensql-python = "gensql_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"